--- a/src/app/block/block/block.component.html
+++ b/src/app/block/block/block.component.html
@@ -17,7 +17,9 @@
         <mat-icon style="margin-right:5px;">code</mat-icon>
         {{ 'BlockchainRawData' | translate }}
       </ng-template>
-      <prettyjson [obj]="block.value.chainData"></prettyjson>
+      <div style="padding:10px;">
+        <ngx-json-viewer [json]="block.value"></ngx-json-viewer>
+      </div>
     </mat-tab>
   </mat-tab-group>
   <ng-template #error>
