--- a/src/app/block/block/block.component.html
+++ b/src/app/block/block/block.component.html
@@ -17,9 +17,10 @@
         <mat-icon style="margin-right:5px;">code</mat-icon>
         {{ 'BlockchainRawData' | translate }}
       </ng-template>
-      <div style="padding:10px;">
-        <ngx-json-viewer [json]="block.value"></ngx-json-viewer>
-      </div>
+      <prettyjson [obj]="block.value"></prettyjson>
+      <!-- <div style="padding:10px;">
+        <ngx-json-viewer [json]="block.value" [expanded]="false"></ngx-json-viewer>
+      </div> -->
     </mat-tab>
   </mat-tab-group>
   <ng-template #error>
