--- a/src/app/block/block/transactions/transactions.component.html
+++ b/src/app/block/block/transactions/transactions.component.html
@@ -1,49 +1,44 @@
-<ng-container *ngIf="transactions; else loading">
-  <app-table [dataSource]="transactions" [title]="'Transactions' | translate" [enablePager]="false">
-    <table mat-table [dataSource]="transactions">
-      <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
-      <ng-container matColumnDef="index">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Index' | translate }}</th>
-        <td mat-cell *matCellDef="let i = index">
-          {{i + 1}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Transaction ID' | translate }}</th>
-        <td mat-cell *matCellDef="let transaction">
-          <a [routerLink]="['/transactions',transaction.trx.id]">
-            <id-64 [id]="transaction.trx.id"></id-64>
-          </a>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Status' | translate }}</th>
-        <td mat-cell *matCellDef="let transaction">
-          {{transaction.status}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="cpu">
-        <th mat-header-cell *matHeaderCellDef>{{ 'CPU Usage' | translate }}</th>
-        <td mat-cell *matCellDef="let transaction">
-          {{transaction.cpu_usage_us | number }} µs
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="net">
-        <th mat-header-cell *matHeaderCellDef>{{ 'NET Usage' | translate }}</th>
-        <td mat-cell *matCellDef="let transaction">
-          {{transaction.net_usage_words | toKB | number:'1.0-3'}} KB
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Actions' | translate }}</th>
-        <td mat-cell *matCellDef="let transaction">
-          {{transaction.trx.transaction?.actions.length}}
-        </td>
-      </ng-container>
-    </table>
-  </app-table>
-</ng-container>
-<ng-template #loading>
-  <app-spinner></app-spinner>
-</ng-template>
+<app-table [dataSource]="block.transactions" [title]="'Transactions' | translate" [enablePager]="false">
+  <table mat-table [dataSource]="block.transactions">
+    <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Index' | translate }}</th>
+      <td mat-cell *matCellDef="let i = index">
+        {{i + 1}}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Transaction ID' | translate }}</th>
+      <td mat-cell *matCellDef="let transaction">
+        <a [routerLink]="['/transactions',block.block_num,transaction.trx.id]">
+          <id-64 [id]="transaction.trx.id"></id-64>
+        </a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Status' | translate }}</th>
+      <td mat-cell *matCellDef="let transaction">
+        {{transaction.status}}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="cpu">
+      <th mat-header-cell *matHeaderCellDef>{{ 'CPU Usage' | translate }}</th>
+      <td mat-cell *matCellDef="let transaction">
+        {{transaction.cpu_usage_us | number }} µs
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="net">
+      <th mat-header-cell *matHeaderCellDef>{{ 'NET Usage' | translate }}</th>
+      <td mat-cell *matCellDef="let transaction">
+        {{transaction.net_usage_words | toKB | number:'1.0-3'}} KB
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Actions' | translate }}</th>
+      <td mat-cell *matCellDef="let transaction">
+        {{transaction.trx.transaction?.actions.length}}
+      </td>
+    </ng-container>
+  </table>
+</app-table>
