--- a/src/app/transaction/transaction/actions/actions.component.html
+++ b/src/app/transaction/transaction/actions/actions.component.html
@@ -1,37 +1,32 @@
-<ng-container *ngIf="transactionActions$ | async as actions; else loading">
-  <app-table [dataSource]="actions" [title]="'Actions' | translate">
-    <table mat-table [dataSource]="actions">
-      <tr mat-header-row *matHeaderRowDef="actionsColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: actionsColumns;"></tr>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let action">
-          <a [routerLink]="['/actions',action.id]">{{action.id}}</a>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="authorizations">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Authorization' | translate }}</th>
-        <td mat-cell *matCellDef="let action">
-          <span *ngFor="let authorization of action.authorizations">
-            <a [routerLink]="['/accounts',authorization.actor]">{{authorization.actor}}</a>
-          </span>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="account">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Handler' | translate }}</th>
-        <td mat-cell *matCellDef="let action">
-          <a [routerLink]="['/accounts',action.account]">{{action.account}}</a>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Name' | translate }}</th>
-        <td mat-cell *matCellDef="let action">
-          {{action.name}}
-        </td>
-      </ng-container>
-    </table>
-  </app-table>
-</ng-container>
-<ng-template #loading>
-  <app-spinner></app-spinner>
-</ng-template>
+<app-table [dataSource]="transaction.trx.trx.actions" [title]="'Actions' | translate" [enablePager]="false">
+  <table mat-table [dataSource]="transaction.trx.trx.actions">
+    <tr mat-header-row *matHeaderRowDef="actionsColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: actionsColumns;"></tr>
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Index' | translate }}</th>
+      <td mat-cell *matCellDef="let action; let i = index">
+        <a [routerLink]="['/actions',transaction.block_num,transaction.id,i]">{{i + 1}}</a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="account">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Account' | translate }}</th>
+      <td mat-cell *matCellDef="let action">
+        <a [routerLink]="['/accounts',action.account]">{{action.account}}</a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="authorization">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Authorizations' | translate }}</th>
+      <td mat-cell *matCellDef="let action">
+        <span *ngFor="let auth of action.authorization">
+          {{auth.actor}}@{{auth.permission}}
+        </span>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>{{ 'Name' | translate }}</th>
+      <td mat-cell *matCellDef="let action">
+        {{action.name}}
+      </td>
+    </ng-container>
+  </table>
+</app-table>
