--- a/src/app/transaction/transaction/transaction.component.html
+++ b/src/app/transaction/transaction/transaction.component.html
@@ -17,17 +17,8 @@
         <mat-icon style="margin-right:5px;">code</mat-icon>
         {{ 'BlockchainRawData' | translate }}
       </ng-template>
-      <app-transaction-data [transaction]="transaction.value"></app-transaction-data>
+      <prettyjson [obj]="transaction.value"></prettyjson>
     </mat-tab>
-    <!-- <mat-tab [disabled]="transaction.numActions == 0">
-          <ng-template mat-tab-label>
-            <mat-icon style="margin-right:5px;">list</mat-icon>
-            <span [matBadge]="transaction.numActions" matBadgeOverlap="false">{{ 'Actions' | translate }}</span>
-          </ng-template>
-          <ng-template matTabContent>
-            <app-transaction-actions [id]="id$ | async"></app-transaction-actions>
-          </ng-template>
-        </mat-tab> -->
   </mat-tab-group>
   <ng-template #error>
     <app-error></app-error>
