--- a/src/app/contract/contract/information/information.component.html
+++ b/src/app/contract/contract/information/information.component.html
@@ -5,7 +5,7 @@
         <tr>
           <td>{{ 'TransactionId' | translate }}:</td>
           <td>
-            <a [routerLink]="['/transactions',action.transaction]">{{action.transaction}}</a>
+            <a [routerLink]="['/transactions',action.blockId,action.transaction]">{{action.transaction}}</a>
           </td>
         </tr>
         <tr>
