--- a/src/app/account/account/actions/actions.component.html
+++ b/src/app/account/account/actions/actions.component.html
@@ -32,7 +32,7 @@
         <ng-container matColumnDef="transaction">
           <th mat-header-cell *matHeaderCellDef>{{ 'Transaction' | translate }}</th>
           <td mat-cell *matCellDef="let action">
-            <a [routerLink]="['/transactions',action.transaction]">
+            <a [routerLink]="['/transactions',action.blockId,action.transaction]">
               <id-64 [id]="action.transaction"></id-64>
             </a>
           </td>
