--- a/src/app/contract/contracts/contracts.component.html
+++ b/src/app/contract/contracts/contracts.component.html
@@ -26,7 +26,7 @@
       <ng-container matColumnDef="transactionId">
         <th mat-header-cell *matHeaderCellDef>{{ 'TransactionId' | translate }}</th>
         <td mat-cell *matCellDef="let action" class="truncate">
-          <a [routerLink]="['/transactions',action.transaction]">
+          <a [routerLink]="['/transactions',action.blockId,action.transaction]">
             <id-64 [id]="action.transaction" [override]="{sm:160,md:240}"></id-64>
           </a>
         </td>
