--- a/src/app/dashboard/dashboard/transactions/transactions.component.html
+++ b/src/app/dashboard/dashboard/transactions/transactions.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
     {{ 'Transactions' | translate }}
-    <a mat-stroked-button color="accent" [routerLink]="['./transactions']">{{ 'ViewAll' | translate }}</a>
+    <a mat-stroked-button color="accent" [routerLink]="['/transactions']">{{ 'ViewAll' | translate }}</a>
   </mat-card-title>
   <mat-card-content>
     <app-table [dataSource]="transactions$ | async" [enablePager]="false">
@@ -13,7 +13,7 @@
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>#</th>
           <td mat-cell *matCellDef="let transaction">
-            <a [routerLink]="['./transactions',transaction.id]">
+            <a [routerLink]="['/transactions',transaction.blockId,transaction.id]">
               <id-64 [id]="transaction.id" [override]="{lg:240}"></id-64>
             </a>
           </td>
