--- a/src/app/producer/producers/producers.component.html
+++ b/src/app/producer/producers/producers.component.html
@@ -20,7 +20,7 @@
       <ng-container matColumnDef="owner">
         <th mat-header-cell *matHeaderCellDef>{{ 'Name' | translate }}</th>
         <td mat-cell *matCellDef="let producer">
-          <a [routerLink]="['./',producer.owner]">{{producer.owner}}</a>
+          <a [routerLink]="['/producers',producer.owner]">{{producer.owner}}</a>
         </td>
       </ng-container>
       <ng-container matColumnDef="url">
