--- a/src/app/transaction/transactions/transactions.component.html
+++ b/src/app/transaction/transactions/transactions.component.html
@@ -13,7 +13,7 @@
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>#</th>
         <td mat-cell *matCellDef="let transaction">
-          <a [routerLink]="['./',transaction.id]">
+          <a [routerLink]="['/transactions',transaction.blockId,transaction.id]">
             <id-64 [id]="transaction.id">{{transaction.id}}</id-64>
           </a>
         </td>
@@ -21,7 +21,7 @@
       <ng-container matColumnDef="blockId">
         <th mat-header-cell *matHeaderCellDef>{{ 'BlockId' | translate }}</th>
         <td mat-cell *matCellDef="let transaction">
-          <a [routerLink]="['../blocks',transaction.blockId]">{{transaction.blockId}}</a>
+          <a [routerLink]="['/blocks',transaction.blockId]">{{transaction.blockId}}</a>
         </td>
       </ng-container>
       <ng-container matColumnDef="createdAt">
