--- a/src/app/account/account/account.component.html
+++ b/src/app/account/account/account.component.html
@@ -3,48 +3,53 @@
     {{ 'Account' | translate }} {{name$ | async}}
   </h1>
 </mat-toolbar>
-<div *ngIf="account$ | async as account; else loading">
-  <app-account-information [account]="account" [eosPrice]="eosPrice$ | async"></app-account-information>
-  <mat-tab-group color="primary" dynamicHeight="true">
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <mat-icon style="margin-right:5px;">list</mat-icon>
-        {{ 'Actions Received' | translate }}
-      </ng-template>
-      <app-account-actions [actions]="accountActionsReceived$ | async"></app-account-actions>
-    </mat-tab>
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <mat-icon style="margin-right:5px;">list</mat-icon>
-        {{ 'Actions Sent' | translate }}
-      </ng-template>
-      <app-account-actions [actions]="accountActionsSent$ | async"></app-account-actions>
-    </mat-tab>
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <mat-icon style="margin-right:5px;">code</mat-icon>
-        {{ 'BlockchainRawData' | translate }}
-      </ng-template>
-      <prettyjson [obj]="account.raw" *ngIf="account.raw"></prettyjson>
-    </mat-tab>
-    <mat-tab [disabled]="!account.abi">
-      <ng-template mat-tab-label>
-        <mat-icon style="margin-right:5px;">code</mat-icon>
-        {{ 'Contract' | translate }}
-      </ng-template>
-      <prettyjson [obj]="account.abi" *ngIf="account.abi"></prettyjson>
-    </mat-tab>
-    <mat-tab [disabled]="!account.abi || account.abi?.tables?.length === 0">
-      <ng-template mat-tab-label>
-        <mat-icon style="margin-right:5px;">table_chart</mat-icon>
-        {{ 'Tables' | translate }}
-      </ng-template>
-      <ng-template matTabContent>
-        <app-account-tables [account]="account"></app-account-tables>
-      </ng-template>
-    </mat-tab>
-  </mat-tab-group>
-</div>
+<ng-container *ngIf="account$ | async as account; else loading">
+  <ng-container *ngIf="!account.isError; else error">
+    <app-account-information [account]="account.value" [eosPrice]="eosPrice$ | async"></app-account-information>
+    <mat-tab-group color="primary" dynamicHeight="true">
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <mat-icon style="margin-right:5px;">list</mat-icon>
+          {{ 'Actions Received' | translate }}
+        </ng-template>
+        <app-account-actions [actions]="accountActionsReceived$ | async"></app-account-actions>
+      </mat-tab>
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <mat-icon style="margin-right:5px;">list</mat-icon>
+          {{ 'Actions Sent' | translate }}
+        </ng-template>
+        <app-account-actions [actions]="accountActionsSent$ | async"></app-account-actions>
+      </mat-tab>
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <mat-icon style="margin-right:5px;">code</mat-icon>
+          {{ 'BlockchainRawData' | translate }}
+        </ng-template>
+        <prettyjson [obj]="account.raw" *ngIf="account.raw"></prettyjson>
+      </mat-tab>
+      <mat-tab [disabled]="!account.abi">
+        <ng-template mat-tab-label>
+          <mat-icon style="margin-right:5px;">code</mat-icon>
+          {{ 'Contract' | translate }}
+        </ng-template>
+        <prettyjson [obj]="account.abi" *ngIf="account.abi"></prettyjson>
+      </mat-tab>
+      <mat-tab [disabled]="!account.abi || account.abi?.tables?.length === 0">
+        <ng-template mat-tab-label>
+          <mat-icon style="margin-right:5px;">table_chart</mat-icon>
+          {{ 'Tables' | translate }}
+        </ng-template>
+        <ng-template matTabContent>
+          <app-account-tables [account]="account"></app-account-tables>
+        </ng-template>
+      </mat-tab>
+    </mat-tab-group>
+  </ng-container>
+  <ng-template #error>
+    <app-error></app-error>
+  </ng-template>
+</ng-container>
 <ng-template #loading>
   <app-spinner></app-spinner>
 </ng-template>
