account actions and abi

--- a/src/app/account/account/account.component.html
+++ b/src/app/account/account/account.component.html
@@ -8,35 +8,42 @@
     <app-account-information [account]="account.value" [eosQuote]="app.eosQuote$ | async" [ramQuote]="app.ramQuote$ | async"></app-account-information>
     <app-account-tokens [tokens]="accountTokens$ | async"></app-account-tokens>
     <mat-tab-group color="primary" dynamicHeight="true">
-      <mat-tab>
+      <!-- <mat-tab>
         <ng-template mat-tab-label>
           <mat-icon style="margin-right:5px;">list</mat-icon>
           {{ 'Actions Received' | translate }}
         </ng-template>
         <app-account-actions [actions]="accountActionsReceived$ | async"></app-account-actions>
-      </mat-tab>
+      </mat-tab> -->
       <mat-tab>
         <ng-template mat-tab-label>
           <mat-icon style="margin-right:5px;">list</mat-icon>
-          {{ 'Actions Sent' | translate }}
+          {{ 'Actions' | translate }}
         </ng-template>
-        <app-account-actions [actions]="accountActionsSent$ | async"></app-account-actions>
+        <app-account-actions [actions]="accountActions$ | async" [newActions]="accountNewActions$ | async" (onLoadMore)="loadMore($event)"></app-account-actions>
       </mat-tab>
       <mat-tab>
         <ng-template mat-tab-label>
           <mat-icon style="margin-right:5px;">code</mat-icon>
           {{ 'BlockchainRawData' | translate }}
         </ng-template>
-        <prettyjson [obj]="account.raw" *ngIf="account.raw"></prettyjson>
+        <prettyjson [obj]="account.value"></prettyjson>
       </mat-tab>
-      <mat-tab [disabled]="!account.abi">
+      <mat-tab>
         <ng-template mat-tab-label>
           <mat-icon style="margin-right:5px;">code</mat-icon>
           {{ 'Contract' | translate }}
         </ng-template>
-        <prettyjson [obj]="account.abi" *ngIf="account.abi"></prettyjson>
+        <ng-template matTabContent>
+          <div *ngIf="(accountAbi$ | async) as abi; else loading">
+            <prettyjson [obj]="abi.value"></prettyjson>
+          </div>
+          <ng-template #loading>
+            <app-spinner></app-spinner>
+          </ng-template>
+        </ng-template>
       </mat-tab>
-      <mat-tab [disabled]="!account.abi || account.abi?.tables?.length === 0">
+      <!-- <mat-tab [disabled]="!account.abi || account.abi?.tables?.length === 0">
         <ng-template mat-tab-label>
           <mat-icon style="margin-right:5px;">table_chart</mat-icon>
           {{ 'Tables' | translate }}
@@ -44,7 +51,7 @@
         <ng-template matTabContent>
           <app-account-tables [account]="account"></app-account-tables>
         </ng-template>
-      </mat-tab>
+      </mat-tab> -->
     </mat-tab-group>
   </ng-container>
   <ng-template #error>
