--- a/src/app/account/account/account.component.html
+++ b/src/app/account/account/account.component.html
@@ -6,7 +6,7 @@
 <ng-container *ngIf="account$ | async as account; else loading">
   <ng-container *ngIf="!account.isError; else error">
     <app-account-information [account]="account.value" [eosQuote]="app.eosQuote$ | async" [ramQuote]="app.ramQuote$ | async"></app-account-information>
-    <app-account-tokens [tokens]="accountTokens$ | async"></app-account-tokens>
+    <app-account-tokens [tokens]="accountTokens$ | async" [account]="name$ | async"></app-account-tokens>
     <mat-tab-group color="primary" dynamicHeight="true">
       <!-- <mat-tab>
         <ng-template mat-tab-label>
