--- a/src/app/producer/producers/producers.component.html
+++ b/src/app/producer/producers/producers.component.html
@@ -26,7 +26,7 @@
       <ng-container matColumnDef="url">
         <th mat-header-cell *matHeaderCellDef>{{ 'Url' | translate }}</th>
         <td mat-cell *matCellDef="let producer">
-          {{producer.url}}
+          <a href="{{producer.url}}">{{producer.url}}</a>
         </td>
       </ng-container>
       <ng-container matColumnDef="numVotes">
