--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -10,13 +10,10 @@
   <div style="padding:10px;" *ngIf="isMaintenance$ | async">
     <app-dashboard-maintenance></app-dashboard-maintenance>
   </div>
-  <!-- <app-dashboard-stats></app-dashboard-stats> -->
-  <div fxLayout.gt-md="row" fxLayout="column">
-    <div fxFlex style="padding:10px;">
-      <app-dashboard-blocks></app-dashboard-blocks>
-    </div>
-    <div fxFlex style="padding:10px;">
-      <app-dashboard-transactions></app-dashboard-transactions>
-    </div>
+  <div style="padding:10px;">
+    <app-dashboard-blocks></app-dashboard-blocks>
+  </div>
+  <div style="padding:10px;">
+    <app-dashboard-transactions></app-dashboard-transactions>
   </div>
 </div>
