--- a/src/app/dashboard/dashboard/transactions/transactions.component.html
+++ b/src/app/dashboard/dashboard/transactions/transactions.component.html
@@ -1,36 +1,51 @@
 <mat-card>
   <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
-    {{ 'Transactions' | translate }}
+    {{ 'Recent Transactions' | translate }}
     <a mat-stroked-button color="accent" [routerLink]="['/transactions']">{{ 'ViewAll' | translate }}</a>
   </mat-card-title>
   <mat-card-content>
-    <app-table [dataSource]="transactions$ | async" [enablePager]="false">
-      <table mat-table [dataSource]="transactions$ | async">
-        <ng-container *ngIf="transactionsColumns$ | async as transactionsColumns">
+    <ng-container *ngIf="transactions$ | async as transactions; else loading">
+      <table mat-table [dataSource]="transactions">
+        <ng-container>
           <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
         </ng-container>
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>#</th>
+          <th mat-header-cell *matHeaderCellDef>{{ 'Transaction ID' | translate }}</th>
           <td mat-cell *matCellDef="let transaction">
-            <a [routerLink]="['/transactions',transaction.blockId,transaction.id]">
-              <id-64 [id]="transaction.id" [override]="{lg:240}"></id-64>
+            <a [routerLink]="['/transactions',transaction.block_num,transaction.trx.id]">
+              <id-64 [id]="transaction.trx.id"></id-64>
             </a>
           </td>
         </ng-container>
-        <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
+        <ng-container matColumnDef="block_num">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Block Number' | translate }}</th>
           <td mat-cell *matCellDef="let transaction">
-            {{transaction.createdAt | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
+            <a [routerLink]="['/blocks',transaction.block_num]">{{transaction.block_num}}</a>
           </td>
         </ng-container>
-        <ng-container matColumnDef="numActions">
+        <ng-container matColumnDef="cpu">
+          <th mat-header-cell *matHeaderCellDef>{{ 'CPU Usage' | translate }}</th>
+          <td mat-cell *matCellDef="let transaction">
+            {{transaction.cpu_usage_us | number }} µs
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="net">
+          <th mat-header-cell *matHeaderCellDef>{{ 'NET Usage' | translate }}</th>
+          <td mat-cell *matCellDef="let transaction">
+            {{transaction.net_usage_words | toKB | number:'1.0-3'}} KB
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>{{ 'Actions' | translate }}</th>
           <td mat-cell *matCellDef="let transaction">
-            {{transaction.numActions}}
+            {{transaction.trx.transaction?.actions?.length || 0}}
           </td>
         </ng-container>
       </table>
-    </app-table>
+    </ng-container>
+    <ng-template #loading>
+      <app-spinner></app-spinner>
+    </ng-template>
   </mat-card-content>
 </mat-card>
