--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -4,16 +4,13 @@
   </h1>
 </mat-toolbar>
 <div>
-  <div style="padding:10px;">
+  <div style="margin:10px;">
     <app-dashboard-chain-status></app-dashboard-chain-status>
   </div>
-  <div style="padding:10px;" *ngIf="isMaintenance$ | async">
-    <app-dashboard-maintenance></app-dashboard-maintenance>
-  </div>
-  <div style="padding:10px;">
+  <div style="margin:10px;">
     <app-dashboard-blocks></app-dashboard-blocks>
   </div>
-  <div style="padding:10px;">
+  <div style="margin:10px;">
     <app-dashboard-transactions></app-dashboard-transactions>
   </div>
 </div>
