--- a/src/app/block/block/transactions/transactions.component.html
+++ b/src/app/block/block/transactions/transactions.component.html
@@ -12,7 +12,7 @@
       <th mat-header-cell *matHeaderCellDef>{{ 'Transaction ID' | translate }}</th>
       <td mat-cell *matCellDef="let transaction">
         <a [routerLink]="['/transactions',block.block_num,transaction.trx.id]">
-          <id-64 [id]="transaction.trx.id"></id-64>
+          <id-64 [id]="transaction.trx.id || transaction.trx"></id-64>
         </a>
       </td>
     </ng-container>
@@ -37,7 +37,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>{{ 'Actions' | translate }}</th>
       <td mat-cell *matCellDef="let transaction">
-        {{transaction.trx.transaction?.actions.length}}
+        {{transaction.trx.transaction?.actions.length || 0}}
       </td>
     </ng-container>
   </table>
