--- a/src/app/block/blocks/blocks.component.html
+++ b/src/app/block/blocks/blocks.component.html
@@ -4,28 +4,22 @@
   </h1>
 </mat-toolbar>
 <div style="margin:10px;">
-  <app-table [dataSource]="blocks$ | async">
-    <table mat-table [dataSource]="blocks$ | async">
-      <ng-container *ngIf="columnHeaders$ | async as columnHeaders">
-        <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+  <div class="table-container mat-elevation-z1" *ngIf="blocks$ | async as blocks; else loading">
+    <table mat-table [dataSource]="blocks" style="border:none;">
+      <ng-container *ngIf="columnHeaders$ | async as blocksColumns">
+        <tr mat-header-row *matHeaderRowDef="blocksColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: blocksColumns;"></tr>
       </ng-container>
-      <ng-container matColumnDef="blockNumber">
-        <th mat-header-cell *matHeaderCellDef>#</th>
+      <ng-container matColumnDef="block_num">
+        <th mat-header-cell *matHeaderCellDef>{{ 'Block Number' | translate }}</th>
         <td mat-cell *matCellDef="let block">
-          <a [routerLink]="['/blocks',block.blockNumber]">{{block.blockNumber}}</a>
+          <a [routerLink]="['/blocks',block.block_num]">{{block.block_num}}</a>
         </td>
       </ng-container>
       <ng-container matColumnDef="timestamp">
         <th mat-header-cell *matHeaderCellDef>{{ 'Timestamp' | translate }}</th>
-        <td mat-cell *matCellDef="let block" class="truncate">
-          {{block.timestamp | amFromUnix | amSubtract: 2 : 'hours' | date:'medium'}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="irreversible">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Pending' | translate }}</th>
         <td mat-cell *matCellDef="let block">
-          {{block.irreversible}}
+          {{block.timestamp | amFromUtc | date:'MMM d, y, h:mm:ss.SSS a'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="producer">
@@ -34,18 +28,16 @@
           <a [routerLink]="['/producers',block.producer]">{{block.producer}}</a>
         </td>
       </ng-container>
-      <ng-container matColumnDef="numTransactions">
+      <ng-container matColumnDef="transactions">
         <th mat-header-cell *matHeaderCellDef>{{ 'Transactions' | translate }}</th>
         <td mat-cell *matCellDef="let block">
-          {{block.numTransactions}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="confirmed">
-        <th mat-header-cell *matHeaderCellDef>{{ 'Confirmations' | translate }}</th>
-        <td mat-cell *matCellDef="let block">
-          {{block.confirmed}}
+          {{block.transactions.length}}
         </td>
       </ng-container>
     </table>
-  </app-table>
+    <mat-paginator [pageIndex]="pageIndex" [pageSize]="pageSize" [length]="total" (page)="onPaging($event)"></mat-paginator>
+  </div>
+  <ng-template #loading>
+    <app-spinner></app-spinner>
+  </ng-template>
 </div>
