--- a/src/app/block/block/transactions/transactions.component.html
+++ b/src/app/block/block/transactions/transactions.component.html
@@ -11,7 +11,7 @@
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>{{ 'Transaction ID' | translate }}</th>
       <td mat-cell *matCellDef="let transaction">
-        <a [routerLink]="['/transactions',block.block_num,transaction.trx.id]">
+        <a [routerLink]="['/transactions',block.block_num,transaction.trx.id||transaction.trx]">
           <id-64 [id]="transaction.trx.id || transaction.trx"></id-64>
         </a>
       </td>
