--- a/src/app/dashboard/settings/settings.component.html
+++ b/src/app/dashboard/settings/settings.component.html
@@ -12,3 +12,12 @@
     </mat-select>
   </mat-form-field>
 </div>
+<div style="margin:20px;">
+  <mat-form-field>
+    <mat-select placeholder="Preferred API" [formControl]="apiControl">
+      <mat-option *ngFor="let api of apis" [value]="api.endpoint">
+        {{api.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
